[package]
name = "mqui_menu"
version = "0.1.0"
edition = "2021"

[dependencies]
rivia = "0.2"
witcher = "0.1"
macroquad = "0.3.24"

[package.metadata.android]
label = "mqui_menu"
package_name = "rust.mqui_menu"
version_code = 1
android_version = 29 
target_sdk_version = 24
min_sdk_version = 24
build_targets = [ "i686-linux-android" ]