[package]
name = "bulma"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-free-icons = { version = "0.6.0", features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3.1"