[package]
name = "bulma"
version = "0.1.0"
edition = "2021"

[dependencies]
fermi = "0.3.0"
dioxus = "0.3.2"
dioxus-router = "0.3.0"
dioxus-free-icons = { version = "0.6.0", features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3.1"

[dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
lipsum = "0.9.0"
once_cell = "1"