[package]
name = "rux"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }
dioxus-hooks = "0.3.0"
dioxus-html = "0.3.1"
dioxus-router = "0.3.0"
dioxus-web = "0.3.1"
walkdir = "2.3.3"
titlecase = "2.2.1"
once_cell = "1.17"
serde = "1.0"

[build-dependencies]
glob = "0.3.0"
rsass = "0.27.0"
