[package]
name = "rux"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-router = "0.3.0"
titlecase = "2.2.1"
once_cell = "1.17"
serde = "1.0"
include-more = { path = "../include-more" }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }
walkdir = "2.3.3"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3.1"

[build-dependencies]
glob = "0.3.0"
rsass = "0.27.0"
