[package]
name = "rux"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-router = "0.3.0"
derive_more = "0.99"
titlecase = "2.2.1"
once_cell = "1.17"
serde = "1.0"
include-more = { path = "../include-more" }
# Needed for WASM support in uuid
getrandom = { version = "0.2", features = ["js"] } 
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }
walkdir = "2.3.3"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3.1"

[build-dependencies]

# CSS build deps
glob = "0.3.0"
rsass = "0.27.0"

# Icon build deps
heck = "~0.4"
itertools = "~0.10"
scraper = "~0.12"
walkdir = "~2"