[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
lipsum = "0.9.0"
dioxus = "0.3.2"
dioxus-web = "0.3.1"
dioxus-router = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }

[build]
target = "wasm32-unknown-unknown"