[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.19.0"
egui-macroquad= "0.12.0"
macroquad = "0.3.24"

[package.metadata.android]
label = "core"
package_name = "rust.core"
version_code = 1
android_version = 29 
target_sdk_version = 24
min_sdk_version = 24
build_targets = [ "i686-linux-android" ]