[package]
name = "menu"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.3.24"
core = { path = "../core" }
button = { path = "../button" }
group = { path = "../group" }

[package.metadata.android]
label = "menu"
package_name = "rust.menu"
version_code = 1
android_version = 29 
target_sdk_version = 24
min_sdk_version = 24
build_targets = [ "i686-linux-android" ]