[package]
name = "axum-example-api"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
tokio = { version = "1.28.1", features = ["signal", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
# tungstenite = "0.19.0" # To use error type
# serde = { version = "1.0.152", features = ["derive"] }
# serde_json = "1.0.93"

# config = { version = "0.13.3", features = ["toml"] }
# Binary error handling
# anyhow
# Library error creation
# thiserror = "1.0.39"
# rand = "0.8.5"

# Utils
once_cell = "1.17.1"
# chrono = { version = "0.4.24", features = ["serde"] }
# unicode-segmentation = "1.10.1"

# Async
futures = "0.3.28"
async-trait = "0.1.68"

# Argument parsing
getopts = "0.2.21"

# Logging and monitoring
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
