[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
tokio = { version = "1.28.1", features = ["signal", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = "0.11.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
# tungstenite = "0.19.0" # To use error type

# config = { version = "0.13.3", features = ["toml"] }
# thiserror = "1.0.39"
# rand = "0.8.5"

# Utils
dotenvy = "0.15.7"
anyhow = "1.0.71"
once_cell = "1.17.1"
chrono = { version = "0.4.24", features = ["serde"] }
# unicode-segmentation = "1.10.1"

# Async
futures = "0.3.28"
async-trait = "0.1.68"

# Argument parsing
getopts = "0.2.21"

# Logging and monitoring
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
mime = "0.3.17"
reqwest = { version = "0.11.18", features = ["json"] }
hyper = { version = "0.14.26", features = ["full"] }