[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
fermi = "0.3.0"
dioxus = "0.3.2"
dioxus-router = "0.3.0"
dioxus-logger = "0.4.1"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0", features = ["transparent"] }
tokio = { version = "1.28.0", features = ["time"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3.2"
gloo-timers = { version = "0.2.6", features = ["futures"], optional = true }

[dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
lipsum = "0.9.0"
once_cell = "1"