[package]
name = "kit"
edition = "2021"
version = "0.1.0"

[dependencies]
icons.workspace = true
dioxus = "0.3.2"
dioxus-router = "0.3.0"
#dioxus-free-icons = { version = "0.6.0", features = ["hero-icons-outline"] }

derive_more = "0.99"
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.3.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = { version = "0.3.1" }

[build-dependencies]
glob = "0.3.0"
rsass = "0.27.0"
